refactor: update display name formatting and improve message handling